--- a/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
@@ -234,6 +234,10 @@
         </quickActionListItems>
     </quickActionList>
     <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Job_Interview__c.Job_Application__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <fields>TASK.SUBJECT</fields>
         <fields>TASK.WHO_NAME</fields>
         <fields>ACTIVITY.TASK</fields>
