--- a/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
@@ -275,7 +275,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hbm0000010kGs</masterLabel>
+        <masterLabel>00hbm000001JoRG</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
