Last minute updates

--- a/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Job_Application__c-Job Application Layout.layout-meta.xml
@@ -17,10 +17,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Company_Name__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Primary_Contact__c</field>
             </layoutItems>
             <layoutItems>
@@ -275,7 +271,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hbm000001JoRG</masterLabel>
+        <masterLabel>00hak000003EZ4D</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
